# tins2022

./: Cargo.toml  README.md
assets/maps/: 1.map
assets/shaders/: water.wgsl
src/: animation.rs  app.rs  assets.rs  camera.rs  enemy.rs  main.rs  map.rs  player.rs  portal.rs  treasure.rs
