[package]
name = "tins2022"
version = "0.1.0"
edition = "2021"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 3

# Enable high level of optimizations for dependencies (incl. Bevy), but not for our own code.
[profile.dev.package."*"]
opt-level = 3

[dependencies.bevy]
version = "0.8"
features = ["mp3", "wayland"]

[dependencies.bevy_asset_loader]
version = "0.12.0"
features = ["2d"]
